--- a/Thesis.tex
+++ b/Thesis.tex
@@ -250,7 +250,7 @@ diploma or other qualifications.
   \include{Sources/Applications}
 
 
-  \include{Sources/Related}
+  \input{Sources/Related.mng}
   \input{Sources/Future.mng}
   \include{Sources/Conclusion}
 
